--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #map {
-  height: 100%;
+  height: 100vh;
   width: 100%;
 }
 
@@ -42,7 +42,10 @@
   -webkit-text-stroke: 3px white;
 }
 #close_dialog_btn {
-  position: absolute;
+  position: fixed !important;
+  top: 32px;
+  right: 32px;
+  z-index: 999;
   -webkit-text-stroke: 1px white;
   top: 8px;
 }
